Fixed tiny h1 wrong font

--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ body {
     padding: 30px;
 }
 
+h1 {
+    font-family: 'Raleway', sans-serif;
+}
+
 h2 {
     font-size: 40px;
     margin-top: 15px;
